# databento_client

./: .gitignore  API_COVERAGE_REPORT.md  BUILDING.md  DEEP_ANALYSIS_REPORT.md  PERFORMANCE_TEST_REPORT.md  QUICKSTART.md  README.md  check_dependencies.ps1  check_dll_deps.ps1  test_dll_load.ps1  verify_release_dll.ps1
.claude/: settings.local.json
docs/: API_COVERAGE_REPORT.md
examples/Advanced.Example/: Advanced.Example.csproj  Program.cs
examples/Authentication.Example/: Program.cs
examples/Batch.Example/: Program.cs
examples/DbnFileReader.Example/: Program.cs
examples/DiagnosticTest/: Program.cs
examples/DiagnosticTest2/: DiagnosticTest2.csproj  Program.cs
examples/Errors.Example/: Program.cs
examples/Historical.Example/: Program.cs
examples/HistoricalData.Example/: Program.cs
examples/LiveStreaming.Example/: Program.cs
examples/Metadata.Example/: Program.cs
examples/SizeLimits.Example/: Program.cs
examples/SymbolMap.Example/: Program.cs
examples/Symbology.Example/: Program.cs
examples/TimestampValidationTest/: Program.cs
src/Databento.Client/: Databento.Client.csproj
src/Databento.Client/Builders/: HistoricalClientBuilder.cs  LiveClientBuilder.cs
src/Databento.Client/Dbn/: DbnFileReader.cs  DbnFileWriter.cs  IDbnFileReader.cs
src/Databento.Client/Events/: DataReceivedEventArgs.cs  ErrorEventArgs.cs
src/Databento.Client/Historical/: HistoricalClient.cs  IHistoricalClient.cs
src/Databento.Client/Live/: ConnectionState.cs  ILiveClient.cs  LiveClient.cs
src/Databento.Client/Metadata/: IPitSymbolMap.cs  ITsSymbolMap.cs  Metadata.cs  PitSymbolMap.cs  TsSymbolMap.cs
src/Databento.Client/Models/: ConfigEnums.cs  Constants.cs  Enums.cs  FlagSet.cs  Record.cs  Schema.cs  TbboMessage.cs  TcbboMessage.cs  TradeMessage.cs  Venues.cs
src/Databento.Client/Models/Batch/: BatchFileDesc.cs  BatchJob.cs
src/Databento.Client/Models/Dbn/: DbnMetadata.cs  MappingInterval.cs  SymbolMapping.cs
src/Databento.Client/Models/Metadata/: BillingInfo.cs  DatasetConditionDetail.cs  DatasetConditionInfo.cs  DatasetRange.cs  FieldDetail.cs  PublisherDetail.cs  SchemaDateRange.cs  UnitPricesForMode.cs
src/Databento.Client/Models/Symbology/: MappingInterval.cs  SymbologyResolution.cs
src/Databento.Client/Utilities/: Constants.cs  DateTimeHelpers.cs  ErrorBufferHelpers.cs
src/Databento.Interop/: Databento.Interop.csproj  DbentoAuthenticationException.cs  DbentoException.cs  DbentoInvalidRequestException.cs  DbentoNotFoundException.cs  DbentoRateLimitException.cs
src/Databento.Interop/Handles/: DbnFileReaderHandle.cs  HistoricalClientHandle.cs  LiveClientHandle.cs  MetadataHandle.cs  SymbologyResolutionHandle.cs  UnitPricesHandle.cs
src/Databento.Interop/Native/: NativeCallbacks.cs  NativeMethods.cs
src/Databento.Native/: CMakeLists.txt
src/Databento.Native/include/: databento_native.h
src/Databento.Native/src/: batch_wrapper.cpp  callback_bridge.cpp  common_helpers.hpp  dbn_file_reader_wrapper.cpp  error_handling.cpp  historical_client_wrapper.cpp  live_client_wrapper.cpp
tests/Databento.Client.Tests/: Databento.Client.Tests.csproj
tests/Databento.Interop.Tests/: Databento.Interop.Tests.csproj
